--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,12 @@
 [tox]
-envlist = py26, py27, py33, py34, py35, flake8
+envlist = py27, py34, py35, py36, flake8
 
 [travis]
 python =
+    3.6: py36
     3.5: py35
     3.4: py34
-    3.3: py33
     2.7: py27
-    2.6: py26
 
 [testenv:flake8]
 basepython=python
@@ -26,5 +25,5 @@ commands =
 
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following lines:
-; deps =
-;     -r{toxinidir}/requirements.txt
+deps =
+    -r{toxinidir}/requirements.txt
