--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,7 @@ setenv =
     PYTHONPATH = {toxinidir}
 deps =
     -r{toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements.txt
 commands =
     pip install -U pip
     py.test --basetemp={envtmpdir}
@@ -25,5 +26,5 @@ commands =
 
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following lines:
-deps =
-    -r{toxinidir}/requirements.txt
+; deps =
+;     -r{toxinidir}/requirements.txt
