--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
     pip install -U pip
-    python -m unittest discover -v
+    py.test
 
 
 ; If you want to make tox run the tests with the same versions, create a
